--- a/alert.html
+++ b/alert.html
@@ -4,17 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            margin:0px;
+        }
+        #map{
+            width:100vw; height:100vh; min-height:500px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Data from OpenAPI</h1>
+    <h1>Spot-Alert-Management</h1>
     <ul id="policeList"></ul>
 
-    <script src="web.js"></script>
+    <script src="index.js"></script>
 
-    <div style="margin-top: 20px; margin-bottom: 10px; font-weight: bold">
-        경찰관 지도
-    </div>
+    <!-- 지도를 표시할 div -->
+    <div id="map"></div>
+    
+    <script type="text/javascript" src=""></script>
+    <script>
+        var mapContainer = document.getElementById('map');
+            mapOption = {
+                center: new kakao.maps.LatLng(37.676318, 126.747968),
+                level: 3
+            };
+        
+        var map = new kakao.maps.Map(mapContainer, mapOption);
 
-    <div id="map" style="width:100%; height:80%";>
+        var markerPosition = new kakao.maps.LatLng(37.676318, 126.747968);
+
+        var marker = new kakao.maps.Marker({
+            position: markerPosition
+        });
+
+        marker.setMap(map);
+    </script>
+
 </body>
 </html>
