--- a/alert.html
+++ b/alert.html
@@ -17,9 +17,9 @@
     <h1>Spot-Alert-Management</h1>
     <ul id="policeList"></ul>
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script>
 
-    <!-- 지도를 표시할 div -->
+    지도를 표시할 div
     <div id="map"></div>
     
     <script type="text/javascript" src=""></script>
@@ -39,7 +39,20 @@
         });
 
         marker.setMap(map);
-    </script>
+    </script>-->
 
+    <div id="map" style="width:100%;height:350px;"></div>
+
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=38a252c97cc5ba2f09615c31c39bc5bf"></script>
+    <script>
+    var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+        mapOption = { 
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+        };
+    
+    // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+    var map = new kakao.maps.Map(mapContainer, mapOption); 
+    </script>
 </body>
 </html>
